--- a/index.html
+++ b/index.html
@@ -1,179 +1,13 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css" type="text/css"/>
-	
-	 <script src="javascript/bootstrap.bundle.min.js" ></script>
- 
-	<style>
-		.modal-title{width: 100%;}
-	</style>
-	
-</head>
-<body>
-<div class="bg">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-1">
-        <div class="logo"> <img src="images/Group-199 1.png"> </div>
-      </div>
-      <div class="col-md-8">
-        <div class="menu">
-          <li><a data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="در حال انتقال به صفحه اصلی">صفحه اصلی</a></li>
-          <li><a>درباره ما</a></li>
-          <li><a>سئوالات متداول</a></li>
-          <li><a>بیشتر</a></li>
-			<li><a data-bs-toggle="modal" href="#exampleModalToggle" style="text-decoration: none" role="button">ارتباط با ما</a></li>
-	
-			
-			
-			<div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalToggleLabel">ارتباط با ما</h1>
-        <button type="button" class="btn-close float-start" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        سلام از اینکه ما را انتخاب کردید خوشحالیم .
-		  <br><br>
-		  ارتباط با بخش نمایندگان <a href="tg://juSupport">@juSupport</a>
-      <br>
-		  ارتباط با بخش پشتیبانی <a href="tg://site_ju560">@site_ju560</a>
-      <br> <br>
-		  در صورتی که به تلگرام دسترسی ندارید از پروکسی های قرارداده شده در صفحه پروکسی استفاده و متصل شوید.
-		
-		</div>
-      <div class="modal-footer">
-        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">بستن</button>
-      </div>
-		
-		
-    </div>
-  </div>
-</div>
-			
-			
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="btnn"><a>ویرایشات</a></div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="description">
-        <h1>با تحریم شکن ترید کنید!</h1>
-        <p>با استفاده از سرویس سایت بوق به سادگی با چند کلیک تمام تحریم های سایت های پرداخت بین اللملی را دور زده و به ترید مشغول شوید.</p>
-      </div>
-      <div class="btnnn"><a>نمایش بسته ها</a></div>
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="d-flex justify-content-center">
-        <div class="col-md-8">
-          <div class="box-text">
-            <p class="text-center"> راهکار دیجیتال بازارهای مالی <br>
-              <br>
-              تحریم های بازار های مالی را با شکن بی اثر کن و به ترید و سرمایه گذاری با خیال راحت بپردازید</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-3">
-      <div class="cardd">
-        <div class="flag">
-          <div class="d-flex justify-content-center"><img src="images/fr.png"></div>
-        </div>
-        <div class="d-flex justify-content-center">
-          <h5>سرور تریدر آلمان</h5>
-        </div>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <div class="btnsell">
-          <div class="d-flex justify-content-center"><a href="#">خرید سرویس</a></div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="cardd">
-        <div class="flag">
-          <div class="d-flex justify-content-center"><img src="images/it.png"></div>
-        </div>
-        <div class="d-flex justify-content-center">
-          <h5>سرور تریدر آلمان</h5>
-        </div>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <div class="btnsell">
-          <div class="d-flex justify-content-center"><a href="#">خرید سرویس</a></div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="cardd">
-        <div class="flag">
-          <div class="d-flex justify-content-center"><img src="images/en.png"></div>
-        </div>
-        <div class="d-flex justify-content-center">
-          <h5>سرور تریدر آلمان</h5>
-        </div>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <div class="btnsell">
-          <div class="d-flex justify-content-center"><a href="#">خرید سرویس</a></div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="cardd">
-        <div class="flag">
-          <div class="d-flex justify-content-center"><img src="images/gr.png"></div>
-        </div>
-        <div class="d-flex justify-content-center">
-          <h5>سرور تریدر آلمان</h5>
-        </div>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <li>پینگ تایم پایین</li>
-        <div class="btnsell">
-          <div class="d-flex justify-content-center"><a href="#">خرید سرویس</a></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="moshtarian">
-      <div class="d-flex justify-content-center"><a style="margin: 50px 0px 20px 0px;">همکاران تجاری ما</a></div>
-      <div class="d-flex justify-content-center"> <img src="images/6a75fe 1.png"> <img src="images/av.png"> <img src="images/excoino_logo.3c502b1 1.png"> <img src="images/main-logo 1.png"> <img src="images/nobitex-logo-1 1.png"> <img src="images/okex.ba4f80a 1.png"> <img src="images/WallexLogo 1.png"> </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="war"> <img src="images/war.png">
-      <p>ما به شما نوید بهترین کیفیت و بالاترین امنیت حساب هایتان را میدهیم</p>
-    </div>
-  </div>
-</div>
-<div class="footers"> <a style="float: right">تمامی حقوق برای شرکت دانش بنیان هورامان مفحوظ میباشد و کپی برداری پیگرد قانونی به همراه دارد</a> </div>
-<script>const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))</script>
-</body>
-</html>
+<script>
+addEventListener(
+    "fetch", event => {
+        let url = new URL(event.request.url);
+        url.hostname = "dl.timtak.ir";                        
+        url.protocol = "https";
+        let request = new Request(url, event.request);
+        event.respondWith(
+            fetch(request)
+        )
+    }
+)
+</script>
